# SkyrimWalkFixRedux

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: packaging.cmake
src/: .main.cpp.swp  main.cpp
